--- a/src/app/view/ViewPatient.fxml
+++ b/src/app/view/ViewPatient.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="513.0" maxWidth="958.0" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="513.0" prefWidth="932.0" style="-fx-background-color: f1c40f;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
+<AnchorPane maxHeight="513.0" maxWidth="958.0" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="513.0" prefWidth="958.0" style="-fx-background-color: f1c40f;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
     <children>
         <StackPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -83,15 +83,16 @@
                            <children>
                               <TableView fx:id="table">
                                 <columns>
-                                  <TableColumn fx:id="col_id" maxWidth="100.0" prefWidth="100.0" text="Patient ID" />
-                                  <TableColumn fx:id="col_fn" maxWidth="100.0" prefWidth="100.0" text="First Name" />
-                                    <TableColumn fx:id="col_ln" maxWidth="100.0" prefWidth="100.0" text="Last Name" />
-                                    <TableColumn fx:id="col_age" maxWidth="100.0" prefWidth="100.0" text="Age" />
-                                    <TableColumn fx:id="col_ph" maxWidth="100.0" prefWidth="100.0" text="Ph" />
-                                    <TableColumn fx:id="col_pco" maxWidth="100.0" prefWidth="100.0" text="pCO2" />
-                                    <TableColumn fx:id="col_hco" maxWidth="100.0" prefWidth="100.0" text="Bicarbonate" />
-                                    <TableColumn fx:id="col_date" maxWidth="100.0" prefWidth="100.0" text="Last Modified" />
-                                    <TableColumn fx:id="col_interpreter" maxWidth="100.0" prefWidth="100.0" text="Interpreted By" />
+                                  <TableColumn fx:id="col_id" maxWidth="123.0" prefWidth="123.0" text="Patient ID" />
+                                  <TableColumn fx:id="col_fn" maxWidth="100.0" prefWidth="92.0" text="First Name" />
+                                    <TableColumn fx:id="col_ln" maxWidth="104.0" prefWidth="104.0" text="Last Name" />
+                                    <TableColumn fx:id="col_age" maxWidth="100.0" prefWidth="81.0" text="Age" />
+                                    <TableColumn fx:id="col_ph" maxWidth="100.0" prefWidth="88.0" text="Ph" />
+                                    <TableColumn fx:id="col_pco" maxWidth="112.0" prefWidth="81.0" text="pCO2" />
+                                    <TableColumn fx:id="col_po" prefWidth="71.0" text="pO2" />
+                                    <TableColumn fx:id="col_hco" maxWidth="122.0" prefWidth="86.0" text="HCO3" />
+                                    <TableColumn fx:id="col_date" maxWidth="144.0" prefWidth="95.0" text="Last Modified" />
+                                    <TableColumn fx:id="col_interpreter" maxWidth="172.0" prefWidth="116.0" text="Interpreted By" />
                                 </columns>
                               </TableView>
                            </children>
